# maverick-coref-de

./: .gitignore  README.md  pyproject.toml
conf/model/mes/: llämmlein2vec-120m.yaml  llämmlein2vec-1b.yaml  llämmlein2vec-7b.yaml  modern-gbert-134m.yaml
docker/: Dockerfile
docker/app/: main.py
maverick_de/common/: util.py
maverick_de/models/: model_incr.py  model_mes.py  model_s2e.py
